# webscraper-anthropic

./: .gitignore  CLAUDE.md  FEATURES.md  MOCKUP_README.md  PRD_WEB_INTERFACE.md  README.md  REQUIREMENTS.md  cli.py  config.yaml.example  debug_server.py  downloader.py  pyproject.toml  requirements.html  requirements.txt  run_web_interface.py  scraper.py  setup.py  simple_flask_server.py  simple_server.py  start_server.py  test_server.py  webscraper  working_server.py
scraped/webscraper.io/text/: allinone.txt  allinone_1.txt
scraped/www.anthropic.com/text/: www.anthropic.com_page_2.txt
tests/: __init__.py  test_config.py  test_scraper.py  test_utils.py
web_interface/: README.md  app.py  run_on_different_port.py
web_interface/static/css/: mockup.css  style.css
web_interface/static/js/: app.js  mockup.js
web_interface/templates/: index.html  mockup.html
webscraper_src/: __init__.py  config.py  utils.py
